added mvi structure

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RecipeApp</string>
+    <string name="error_msg">Something went wrong please retry.</string>
 </resources>
